Added feature to show interactive widgets(button) to show starting eleven of certain match

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -517,13 +517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fce206b936b40159e2bdebd3399c450",
+       "model_id": "e88c7ecd25fc4778aebd44e8e0caaaa2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,6 +549,7 @@
     "    button_show_events = widgets.Button(description=\"Show Events\")\n",
     "    button_home_statistics = widgets.Button(description = x.getHomeTeam().getCountryName() + \" statistics\")\n",
     "    button_away_statistics = widgets.Button(description = x.getAwayTeam().getCountryName() + \" statistics\")\n",
+    "    button_show_starting_eleven = widgets.Button(description=\"Starting Eleven\")\n",
     "    f_flag_home = open(\"./statics/Flag_of_\" + x.getHomeTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
     "    f_flag_away = open(\"./statics/Flag_of_\" + x.getAwayTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
     "    flag_home = widgets.Image(value=f_flag_home, format='png', width=45, height=9)\n",
@@ -597,15 +598,49 @@
     "        with bout:\n",
     "            for k, v in x.away_team_statistics.items():\n",
     "                print(k + \" \" + str(v))\n",
+    "                \n",
+    "    def buttonShowStartingElevenOnClick(b):\n",
+    "        bout.clear_output()\n",
+    "        with bout:\n",
+    "            home_team_starting_eleven_output_list = []\n",
+    "            away_team_starting_eleven_output_list = []\n",
+    "\n",
+    "            team_name = widgets.Output(layout={'border': '2px solid black'})\n",
+    "            with team_name:\n",
+    "                print(x.getHomeTeam().getCountryName())\n",
+    "            home_team_starting_eleven_output_list.append(team_name)\n",
+    "            for player in x.getHomeTeamStartingEleven():\n",
+    "                player_info = widgets.Output()\n",
+    "                cap_mark = \"(C)\" if player['captain']==True else \"\"\n",
+    "                with player_info:\n",
+    "                    print(str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'])\n",
+    "                home_team_starting_eleven_output_list.append(player_info)\n",
+    "\n",
+    "            team_name = widgets.Output(layout={'border': '2px solid black'})\n",
+    "            with team_name:\n",
+    "                print(x.getAwayTeam().getCountryName())\n",
+    "            away_team_starting_eleven_output_list.append(team_name)\n",
+    "            for player in x.getAwayTeamStartingEleven():\n",
+    "                player_info = widgets.Output()\n",
+    "                cap_mark = \" (C) \" if player['captain']==True else \"\"\n",
+    "                with player_info:\n",
+    "                    print(str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'])\n",
+    "                away_team_starting_eleven_output_list.append(player_info)\n",
+    "\n",
+    "            home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
+    "            away_11_vbox = widgets.VBox(away_team_starting_eleven_output_list)\n",
+    "            both_11_hbox = widgets.HBox([home_11_vbox, away_11_vbox])\n",
+    "            display(both_11_hbox)\n",
     "    button_show_events.on_click(buttonShowEventsOnClick)\n",
     "    button_home_statistics.on_click(buttonShowHomeStatisticsOnClick)\n",
     "    button_away_statistics.on_click(buttonShowAwayStatisticsOnClick)\n",
+    "    button_show_starting_eleven.on_click(buttonShowStartingElevenOnClick)\n",
     "    if x.isCompleted():\n",
     "        #display(button_show_events)\n",
     "        #display(button_home_statistics)\n",
     "        #display(button_away_statistics)\n",
     "        #display(bout)\n",
-    "        buttons_results_box = widgets.VBox([widgets.HBox([button_show_events, button_home_statistics, button_away_statistics]), bout])\n",
+    "        buttons_results_box = widgets.VBox([widgets.HBox([button_show_starting_eleven,button_show_events, button_home_statistics, button_away_statistics]), bout])\n",
     "        display(buttons_results_box)\n",
     "\n",
     "def showTeamInfo(x):\n",
