--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -292,6 +292,7 @@
    "source": [
     "class wc_match(object):\n",
     "    def __init__(self, location, venue, status , time, fifa_id, datetime ,\n",
+    "                 officials, stage_name, weather,\n",
     "                 home_team_goals, away_team_goals,\n",
     "                 home_team_statistics, away_team_statistics,\n",
     "                 home_team, away_team, home_event_list, away_event_list, winner):\n",
@@ -301,6 +302,9 @@
     "        self.time = time\n",
     "        self.fifa_id = fifa_id\n",
     "        self.datetime = datetime\n",
+    "        self.officials = officials\n",
+    "        self.stage_name = stage_name\n",
+    "        self.weather = weather\n",
     "        self.home_team_goals = home_team_goals\n",
     "        self.away_team_goals = away_team_goals\n",
     "        self.home_team_statistics = home_team_statistics\n",
@@ -407,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,6 +451,7 @@
     "            match_dict[m['fifa_id']] = wc_match(location = m['venue'], venue = m['location'],\n",
     "                                                status = m['status'], time = m['time'],\n",
     "                                                fifa_id = m['fifa_id'], datetime = m['datetime'],\n",
+    "                                                officials = m['officials'], stage_name = m['stage_name'], weather = m['weather'],\n",
     "                                                home_team = team_dict[m['home_team']['country']],\n",
     "                                                away_team = team_dict[m['away_team']['country']],\n",
     "                                                home_team_goals = m['home_team']['goals'],\n",
@@ -468,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +501,10 @@
       "{'name': 'Aron GUNNARSSON', 'captain': True, 'shirt_number': 17, 'position': 'Midfield'}\n",
       "{'name': 'Hordur MAGNUSSON', 'captain': False, 'shirt_number': 18, 'position': 'Defender'}\n",
       "{'name': 'Rurik GISLASON', 'captain': False, 'shirt_number': 19, 'position': 'Midfield'}\n",
-      "{'name': 'Jon BODVARSSON', 'captain': False, 'shirt_number': 22, 'position': 'Forward'}\n"
+      "{'name': 'Jon BODVARSSON', 'captain': False, 'shirt_number': 22, 'position': 'Forward'}\n",
+      "['Matt CONGER', 'Simon LOUNT', 'Tevita MAKASINI', 'Ricardo MONTERO', 'Massimiliano IRRATI', 'Elenito DI LIBERATORE', 'Pawel GIL', 'Gianluca ROCCHI', 'Hiroshi YAMAUCHI']\n",
+      "{'humidity': '19', 'temp_celsius': '32', 'temp_farenheit': '64', 'wind_speed': '2', 'description': 'Sunny'}\n",
+      "First stage\n"
      ]
     }
    ],
@@ -505,7 +513,11 @@
     "for player in m.getHomeTeamStartingEleven():\n",
     "    print(player)\n",
     "for player in m.getAwayTeamStartingEleven():\n",
-    "    print(player)"
+    "    print(player)\n",
+    "\n",
+    "print(m.officials)\n",
+    "print(m.weather)\n",
+    "print(m.stage_name)"
    ]
   },
   {
