Added feature to link starting eleven player names to wikipedia link
only link to wikipedia url with exact player name in the API can be
built

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### mono color for every team as home or away team for showing nicer plot  ;-)\n",
+    "#### mono color for every team as home or away team for showing nicer plot  ;-)\n",
     "\n",
     "https://matplotlib.org/api/colors_api.html\n",
     "\n",
@@ -623,13 +623,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e88c7ecd25fc4778aebd44e8e0caaaa2",
+       "model_id": "7db85025d8f54ced9f250b4fe46fd1d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -643,8 +643,19 @@
    ],
    "source": [
     "import ipywidgets as widgets\n",
+    "import webbrowser\n",
+    "\n",
     "out = widgets.Output()\n",
     "match_info_out = widgets.Output(layout={'border': '1px solid black'})\n",
+    "\n",
+    "def name2WikiUrl(name):\n",
+    "    # change all names in full name to name with cap first letter and rest lower\n",
+    "    sub_names = name.split(' ')\n",
+    "    name_in_url = \"\"\n",
+    "    for n in sub_names:\n",
+    "        name_in_url = name_in_url + n.lower()[0].upper() + n.lower()[1:] + \"_\"\n",
+    "    name_in_url = name_in_url[:-1]\n",
+    "    return \"https://en.wikipedia.org/wiki/\" + name_in_url\n",
     "\n",
     "\n",
     "def showMatchInfo(x):\n",
@@ -715,11 +726,16 @@
     "            with team_name:\n",
     "                print(x.getHomeTeam().getCountryName())\n",
     "            home_team_starting_eleven_output_list.append(team_name)\n",
+    "            f_list = []\n",
     "            for player in x.getHomeTeamStartingEleven():\n",
     "                player_info = widgets.Output()\n",
     "                cap_mark = \"(C)\" if player['captain']==True else \"\"\n",
     "                with player_info:\n",
-    "                    print(str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'])\n",
+    "                    p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
+    "                                       layout = {'width':'300px','height':'30px'})\n",
+    "                    p.player_name = player['name']\n",
+    "                    p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "                    display(p)\n",
     "                home_team_starting_eleven_output_list.append(player_info)\n",
     "\n",
     "            team_name = widgets.Output(layout={'border': '2px solid black'})\n",
@@ -730,7 +746,12 @@
     "                player_info = widgets.Output()\n",
     "                cap_mark = \" (C) \" if player['captain']==True else \"\"\n",
     "                with player_info:\n",
-    "                    print(str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'])\n",
+    "                    p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
+    "                                       layout = {'width':'300px','height':'30px'})\n",
+    "                    p.player_name = player['name']\n",
+    "                    p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "                    display(p)\n",
+    "                    \n",
     "                away_team_starting_eleven_output_list.append(player_info)\n",
     "\n",
     "            home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
