Changed 4 buttons to show match info to a tab

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -567,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7db85025d8f54ced9f250b4fe46fd1d0",
+       "model_id": "65ee70410d0d429d963fa8ced6fe38aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -607,112 +607,100 @@
     "    with match_info_out:\n",
     "        x.printBasicMatchInfo()\n",
     "    display(match_info_out)\n",
-    "    button_show_events = widgets.Button(description=\"Show Events\")\n",
-    "    button_home_statistics = widgets.Button(description = x.getHomeTeam().getCountryName() + \" statistics\")\n",
-    "    button_away_statistics = widgets.Button(description = x.getAwayTeam().getCountryName() + \" statistics\")\n",
-    "    button_show_starting_eleven = widgets.Button(description=\"Starting Eleven\")\n",
     "    f_flag_home = open(\"./statics/Flag_of_\" + x.getHomeTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
     "    f_flag_away = open(\"./statics/Flag_of_\" + x.getAwayTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
     "    flag_home = widgets.Image(value=f_flag_home, format='png', width=45, height=9)\n",
     "    flag_away = widgets.Image(value=f_flag_away, format='png', width=45, height=9)\n",
-    "    bout=widgets.Output()\n",
-    "    def buttonShowEventsOnClick(b):\n",
-    "        bout.clear_output()\n",
-    "        with bout:\n",
-    "            for e in x.getOrderedEventsList():\n",
-    "                if e[\"type_of_event\"] in ['yellow-card', 'red-card', 'substitution-in', 'substitution-out']:\n",
-    "                    f_event_type = open(\"./statics/\" + e[\"type_of_event\"] + \".svg.png\", 'rb').read()\n",
-    "                    event_type = widgets.Image(value=f_event_type, format='png', width=12, height=24)\n",
-    "                elif e['type_of_event'] in ['goal-own','goal-penalty', 'goal']:\n",
-    "                    goal_type_out = widgets.Output(layout={'border': '1px solid red'})\n",
-    "                    with goal_type_out:\n",
-    "                        if e['type_of_event'] == 'goal-own':\n",
-    "                            print(\"o.g.\")\n",
-    "                        elif e['type_of_event'] == 'goal-penalty':\n",
-    "                            print(\"pen.\")\n",
-    "                    f_event_type = open(\"./statics/goal.svg.png\", 'rb').read()\n",
-    "                    if e['type_of_event'] == 'goal':\n",
-    "                        event_type = widgets.Image(value=f_event_type, format='png', width=24, height=24)\n",
-    "                    else:\n",
-    "                        event_type = widgets.HBox([widgets.Image(value=f_event_type, format='png', width=24, height=24), goal_type_out])\n",
+    "    match_event_list_out = widgets.Output()\n",
+    "    with match_event_list_out:\n",
+    "        for e in x.getOrderedEventsList():\n",
+    "            if e[\"type_of_event\"] in ['yellow-card', 'red-card', 'substitution-in', 'substitution-out']:\n",
+    "                f_event_type = open(\"./statics/\" + e[\"type_of_event\"] + \".svg.png\", 'rb').read()\n",
+    "                event_type = widgets.Image(value=f_event_type, format='png', width=12, height=24)\n",
+    "            elif e['type_of_event'] in ['goal-own','goal-penalty', 'goal']:\n",
+    "                goal_type_out = widgets.Output(layout={'border': '1px solid red'})\n",
+    "                with goal_type_out:\n",
+    "                    if e['type_of_event'] == 'goal-own':\n",
+    "                        print(\"o.g.\")\n",
+    "                    elif e['type_of_event'] == 'goal-penalty':\n",
+    "                        print(\"pen.\")\n",
+    "                f_event_type = open(\"./statics/goal.svg.png\", 'rb').read()\n",
+    "                if e['type_of_event'] == 'goal':\n",
+    "                    event_type = widgets.Image(value=f_event_type, format='png', width=24, height=24)\n",
     "                else:\n",
-    "                    event_type = widgets.Output(layout={'border': '1px solid black'})\n",
-    "                    with event_type:\n",
-    "                        print(e[\"type_of_event\"])\n",
-    "                event_time = widgets.Output(layout={'border': '3px solid black'})\n",
-    "                with event_time:\n",
-    "                    print(e['time'])\n",
-    "                event_player = widgets.Output()\n",
-    "                with event_player:\n",
-    "                    print(e['player'])\n",
-    "                event_flag = flag_home if e['team']==x.getHomeTeam() else flag_away\n",
-    "                event_info_box = widgets.HBox([event_time, event_type, event_player, event_flag])\n",
-    "                display(event_info_box)\n",
-    "                \n",
-    "    def buttonShowHomeStatisticsOnClick(b):\n",
-    "        bout.clear_output()\n",
-    "        with bout:\n",
-    "            for k, v in x.home_team_statistics.items():\n",
-    "                print(k + \" \" + str(v))\n",
-    "    def buttonShowAwayStatisticsOnClick(b):\n",
-    "        bout.clear_output()\n",
-    "        with bout:\n",
-    "            for k, v in x.away_team_statistics.items():\n",
-    "                print(k + \" \" + str(v))\n",
-    "                \n",
-    "    def buttonShowStartingElevenOnClick(b):\n",
-    "        bout.clear_output()\n",
-    "        with bout:\n",
-    "            home_team_starting_eleven_output_list = []\n",
-    "            away_team_starting_eleven_output_list = []\n",
+    "                    event_type = widgets.HBox([widgets.Image(value=f_event_type, format='png', width=24, height=24), goal_type_out])\n",
+    "            else:\n",
+    "                event_type = widgets.Output(layout={'border': '1px solid black'})\n",
+    "                with event_type:\n",
+    "                    print(e[\"type_of_event\"])\n",
+    "            event_time = widgets.Output(layout={'border': '3px solid black'})\n",
+    "            with event_time:\n",
+    "                print(e['time'])\n",
+    "            event_player = widgets.Output()\n",
+    "            with event_player:\n",
+    "                print(e['player'])\n",
+    "            event_flag = flag_home if e['team']==x.getHomeTeam() else flag_away\n",
+    "            event_info_box = widgets.HBox([event_time, event_type, event_player, event_flag])\n",
+    "            display(event_info_box)\n",
     "\n",
-    "            team_name = widgets.Output(layout={'border': '2px solid black'})\n",
-    "            with team_name:\n",
-    "                print(x.getHomeTeam().getCountryName())\n",
-    "            home_team_starting_eleven_output_list.append(team_name)\n",
-    "            f_list = []\n",
-    "            for player in x.getHomeTeamStartingEleven():\n",
-    "                player_info = widgets.Output()\n",
-    "                cap_mark = \"(C)\" if player['captain']==True else \"\"\n",
-    "                with player_info:\n",
-    "                    p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
-    "                                       layout = {'width':'300px','height':'30px'})\n",
-    "                    p.player_name = player['name']\n",
-    "                    p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "                    display(p)\n",
-    "                home_team_starting_eleven_output_list.append(player_info)\n",
+    "    show_home_statistics_out = widgets.Output()\n",
+    "    with show_home_statistics_out:    \n",
+    "        for k, v in x.home_team_statistics.items():\n",
+    "            print(k + \" \" + str(v))\n",
+    "    show_away_statistics_out = widgets.Output()\n",
+    "    with show_away_statistics_out:    \n",
+    "        for k, v in x.away_team_statistics.items():\n",
+    "            print(k + \" \" + str(v))\n",
     "\n",
-    "            team_name = widgets.Output(layout={'border': '2px solid black'})\n",
-    "            with team_name:\n",
-    "                print(x.getAwayTeam().getCountryName())\n",
-    "            away_team_starting_eleven_output_list.append(team_name)\n",
-    "            for player in x.getAwayTeamStartingEleven():\n",
-    "                player_info = widgets.Output()\n",
-    "                cap_mark = \" (C) \" if player['captain']==True else \"\"\n",
-    "                with player_info:\n",
-    "                    p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
-    "                                       layout = {'width':'300px','height':'30px'})\n",
-    "                    p.player_name = player['name']\n",
-    "                    p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
-    "                    display(p)\n",
-    "                    \n",
-    "                away_team_starting_eleven_output_list.append(player_info)\n",
+    "    show_starting_eleven_out = widgets.Output()\n",
+    "    with show_starting_eleven_out:\n",
+    "        home_team_starting_eleven_output_list = []\n",
+    "        away_team_starting_eleven_output_list = []\n",
     "\n",
-    "            home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
-    "            away_11_vbox = widgets.VBox(away_team_starting_eleven_output_list)\n",
-    "            both_11_hbox = widgets.HBox([home_11_vbox, away_11_vbox])\n",
-    "            display(both_11_hbox)\n",
-    "    button_show_events.on_click(buttonShowEventsOnClick)\n",
-    "    button_home_statistics.on_click(buttonShowHomeStatisticsOnClick)\n",
-    "    button_away_statistics.on_click(buttonShowAwayStatisticsOnClick)\n",
-    "    button_show_starting_eleven.on_click(buttonShowStartingElevenOnClick)\n",
+    "        team_name = widgets.Output(layout={'border': '2px solid black'})\n",
+    "        with team_name:\n",
+    "            print(x.getHomeTeam().getCountryName())\n",
+    "        home_team_starting_eleven_output_list.append(team_name)\n",
+    "        f_list = []\n",
+    "        for player in x.getHomeTeamStartingEleven():\n",
+    "            player_info = widgets.Output()\n",
+    "            cap_mark = \"(C)\" if player['captain']==True else \"\"\n",
+    "            with player_info:\n",
+    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
+    "                                   layout = {'width':'300px','height':'30px'})\n",
+    "                p.player_name = player['name']\n",
+    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "                display(p)\n",
+    "            home_team_starting_eleven_output_list.append(player_info)\n",
+    "\n",
+    "        team_name = widgets.Output(layout={'border': '2px solid black'})\n",
+    "        with team_name:\n",
+    "            print(x.getAwayTeam().getCountryName())\n",
+    "        away_team_starting_eleven_output_list.append(team_name)\n",
+    "        for player in x.getAwayTeamStartingEleven():\n",
+    "            player_info = widgets.Output()\n",
+    "            cap_mark = \" (C) \" if player['captain']==True else \"\"\n",
+    "            with player_info:\n",
+    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
+    "                                   layout = {'width':'300px','height':'30px'})\n",
+    "                p.player_name = player['name']\n",
+    "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
+    "                display(p)\n",
+    "\n",
+    "            away_team_starting_eleven_output_list.append(player_info)\n",
+    "\n",
+    "        home_11_vbox = widgets.VBox(home_team_starting_eleven_output_list)\n",
+    "        away_11_vbox = widgets.VBox(away_team_starting_eleven_output_list)\n",
+    "        both_11_hbox = widgets.HBox([home_11_vbox, away_11_vbox])\n",
+    "        display(both_11_hbox)\n",
     "    if x.isCompleted():\n",
-    "        #display(button_show_events)\n",
-    "        #display(button_home_statistics)\n",
-    "        #display(button_away_statistics)\n",
-    "        #display(bout)\n",
-    "        buttons_results_box = widgets.VBox([widgets.HBox([button_show_starting_eleven,button_show_events, button_home_statistics, button_away_statistics]), bout])\n",
-    "        display(buttons_results_box)\n",
+    "        match_info_tab = widgets.Tab(children=[match_event_list_out, show_home_statistics_out,\n",
+    "                                               show_away_statistics_out, show_starting_eleven_out])\n",
+    "        match_info_tab.set_title(0, \"Match Events\")\n",
+    "        match_info_tab.set_title(1, x.getHomeTeam().getCountryName() + \" statistics\")\n",
+    "        match_info_tab.set_title(2, x.getAwayTeam().getCountryName() + \" statistics\")\n",
+    "        match_info_tab.set_title(3, \"Starting Elevens\")\n",
+    "        display(match_info_tab)\n",
     "\n",
     "def showTeamInfo(x):\n",
     "    out.clear_output()\n",
