Added image of "second yellow card to send off" and codes to cope with it

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -567,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65ee70410d0d429d963fa8ced6fe38aa",
+       "model_id": "e3a53bceff994483bebacd7a398e1e93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -616,7 +616,10 @@
     "        for e in x.getOrderedEventsList():\n",
     "            if e[\"type_of_event\"] in ['yellow-card', 'red-card', 'substitution-in', 'substitution-out']:\n",
     "                f_event_type = open(\"./statics/\" + e[\"type_of_event\"] + \".svg.png\", 'rb').read()\n",
-    "                event_type = widgets.Image(value=f_event_type, format='png', width=12, height=24)\n",
+    "                event_type = widgets.Image(value=f_event_type, format='png', width=20, height=24)\n",
+    "            elif e['type_of_event'] == \"yellow-card-second\":\n",
+    "                f_event_type = open(\"./statics/yellow-card-second.svg.png\", 'rb').read()\n",
+    "                event_type = widgets.Image(value=f_event_type, format='png', width=50, height=24)\n",
     "            elif e['type_of_event'] in ['goal-own','goal-penalty', 'goal']:\n",
     "                goal_type_out = widgets.Output(layout={'border': '1px solid red'})\n",
     "                with goal_type_out:\n",
