Added gold color for captain in starting eleven list

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -567,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3a53bceff994483bebacd7a398e1e93",
+       "model_id": "0e63f5eecfd54e98a4b88b365746eb95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -591,6 +591,7 @@
     "\n",
     "out = widgets.Output()\n",
     "match_info_out = widgets.Output(layout={'border': '1px solid black'})\n",
+    "player_pos_color_dict = {'captain':'gold'}\n",
     "\n",
     "def name2WikiUrl(name):\n",
     "    # change all names in full name to name with cap first letter and rest lower\n",
@@ -671,6 +672,7 @@
     "            with player_info:\n",
     "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
     "                                   layout = {'width':'300px','height':'30px'})\n",
+    "                p.style.button_color = player_pos_color_dict['captain'] if player['captain'] else 'ghostwhite'\n",
     "                p.player_name = player['name']\n",
     "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
     "                display(p)\n",
@@ -682,10 +684,11 @@
     "        away_team_starting_eleven_output_list.append(team_name)\n",
     "        for player in x.getAwayTeamStartingEleven():\n",
     "            player_info = widgets.Output()\n",
-    "            cap_mark = \" (C) \" if player['captain']==True else \"\"\n",
+    "            cap_mark = \" captain\" if player['captain']==True else \"\"\n",
     "            with player_info:\n",
-    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
+    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
     "                                   layout = {'width':'300px','height':'30px'})\n",
+    "                p.style.button_color = player_pos_color_dict['captain'] if player['captain'] else 'ghostwhite'\n",
     "                p.player_name = player['name']\n",
     "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
     "                display(p)\n",
