Added color to players in starting eleven list according to their positions

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -567,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e63f5eecfd54e98a4b88b365746eb95",
+       "model_id": "4d1bd601192d485599808e0958186013",
        "version_major": 2,
        "version_minor": 0
       },
@@ -591,7 +591,8 @@
     "\n",
     "out = widgets.Output()\n",
     "match_info_out = widgets.Output(layout={'border': '1px solid black'})\n",
-    "player_pos_color_dict = {'captain':'gold'}\n",
+    "home_team_player_pos_color_dict = {'captain':'gold', 'Goalie':'#006600', 'Defender':'#009900', 'Midfield':'#00cc00', 'Forward':'#00ff00'}\n",
+    "away_team_player_pos_color_dict = {'captain':'gold', 'Goalie':'#0033ff', 'Defender':'#0066ff', 'Midfield':'#0099ff', 'Forward':'#00ccff'}\n",
     "\n",
     "def name2WikiUrl(name):\n",
     "    # change all names in full name to name with cap first letter and rest lower\n",
@@ -668,11 +669,12 @@
     "        f_list = []\n",
     "        for player in x.getHomeTeamStartingEleven():\n",
     "            player_info = widgets.Output()\n",
-    "            cap_mark = \"(C)\" if player['captain']==True else \"\"\n",
+    "            cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
     "            with player_info:\n",
-    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + cap_mark + \"  \" + player['position'],\n",
+    "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
     "                                   layout = {'width':'300px','height':'30px'})\n",
-    "                p.style.button_color = player_pos_color_dict['captain'] if player['captain'] else 'ghostwhite'\n",
+    "                p.style.button_color = home_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                       else home_team_player_pos_color_dict[player['position']]\n",
     "                p.player_name = player['name']\n",
     "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
     "                display(p)\n",
@@ -684,11 +686,12 @@
     "        away_team_starting_eleven_output_list.append(team_name)\n",
     "        for player in x.getAwayTeamStartingEleven():\n",
     "            player_info = widgets.Output()\n",
-    "            cap_mark = \" captain\" if player['captain']==True else \"\"\n",
+    "            cap_mark = \" Captain\" if player['captain']==True else \"\"\n",
     "            with player_info:\n",
     "                p = widgets.Button(description=str(player['shirt_number']) + \": \" +  player['name'] + \"  \" + player['position'] + cap_mark,\n",
     "                                   layout = {'width':'300px','height':'30px'})\n",
-    "                p.style.button_color = player_pos_color_dict['captain'] if player['captain'] else 'ghostwhite'\n",
+    "                p.style.button_color = away_team_player_pos_color_dict['captain'] if player['captain']\\\n",
+    "                                       else away_team_player_pos_color_dict[player['position']]\n",
     "                p.player_name = player['name']\n",
     "                p.on_click(lambda b: webbrowser.open(name2WikiUrl(b.player_name), new=2, autoraise=True))\n",
     "                display(p)\n",
