Added "stage name" info to print in match info output

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -469,6 +469,7 @@
     "    def printBasicMatchInfo(self):\n",
     "        print(\"Venue:          \" + self.venue + \", \" + self.location)\n",
     "        print(\"Date Time:      \" + self.datetime)\n",
+    "        print(\"Game Stage:     \" + self.stage_name)\n",
     "        if len(self.home_team.getCountryNameWithCode())<15:\n",
     "            blank = ' '*(16 - len(self.home_team.getCountryNameWithCode()))\n",
     "        else:\n",
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -567,13 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d1bd601192d485599808e0958186013",
+       "model_id": "13f6c77a86d540aa89a2badacc41b4d3",
        "version_major": 2,
        "version_minor": 0
       },
