Changed to not print "tactics", "starting eleven" or "substitutes" in "team statistics"

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -568,13 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13f6c77a86d540aa89a2badacc41b4d3",
+       "model_id": "51ebb03073124d308c65fb1b4597cc65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,11 +652,13 @@
     "    show_home_statistics_out = widgets.Output()\n",
     "    with show_home_statistics_out:    \n",
     "        for k, v in x.home_team_statistics.items():\n",
-    "            print(k + \" \" + str(v))\n",
+    "            if k != \"tactics\" and k != \"starting_eleven\" and k != \"substitutes\":\n",
+    "                print(k + \" \" + str(v))\n",
     "    show_away_statistics_out = widgets.Output()\n",
     "    with show_away_statistics_out:    \n",
     "        for k, v in x.away_team_statistics.items():\n",
-    "            print(k + \" \" + str(v))\n",
+    "            if k != \"tactics\" and k != \"starting_eleven\" and k != \"substitutes\":\n",
+    "                print(k + \" \" + str(v))\n",
     "\n",
     "    show_starting_eleven_out = widgets.Output()\n",
     "    with show_starting_eleven_out:\n",
