Changed codes to fetch all games, even game with team undetermined

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -402,11 +402,13 @@
     "        self.home_team = home_team\n",
     "        self.away_team = away_team\n",
     "        self.home_event_list = home_event_list\n",
-    "        for d in self.home_event_list:\n",
-    "            d['team'] = home_team\n",
+    "        if self.home_event_list:\n",
+    "            for d in self.home_event_list:\n",
+    "                d['team'] = home_team\n",
     "        self.away_event_list = away_event_list\n",
-    "        for d in self.away_event_list:\n",
-    "            d['team'] = away_team\n",
+    "        if self.away_event_list:\n",
+    "            for d in self.away_event_list:\n",
+    "                d['team'] = away_team\n",
     "        if self.status=='completed':\n",
     "            if winner != 'Draw':\n",
     "                self.winner = self.home_team if self.home_team.getFifaCode() == winner else self.away_team\n",
@@ -502,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -531,10 +533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "all_matches_json = urllib.request.urlopen('http://worldcup.sfg.io/matches')\n",
@@ -556,7 +556,20 @@
     "                                                home_event_list = m['home_team_events'],\n",
     "                                                away_event_list = m['away_team_events'], winner = m['winner_code'])\n",
     "            team_dict[m['home_team']['country']].addMatch(match_dict[m['fifa_id']])\n",
-    "            team_dict[m['away_team']['country']].addMatch(match_dict[m['fifa_id']])"
+    "            team_dict[m['away_team']['country']].addMatch(match_dict[m['fifa_id']])\n",
+    "        else:\n",
+    "            match_dict[m['fifa_id']] = wc_match(location = m['venue'], venue = m['location'],\n",
+    "                                                status = m['status'], time = m['time'],\n",
+    "                                                fifa_id = m['fifa_id'], datetime = m['datetime'],\n",
+    "                                                officials = m['officials'], stage_name = m['stage_name'], weather = m['weather'],\n",
+    "                                                home_team = None,\n",
+    "                                                away_team = None,\n",
+    "                                                home_team_goals = None,\n",
+    "                                                away_team_goals = None,\n",
+    "                                                home_team_statistics = m['home_team_statistics'] if 'home_team_statistics' in m else {},\n",
+    "                                                away_team_statistics = m['away_team_statistics'] if 'away_team_statistics' in m else {},\n",
+    "                                                home_event_list = None,\n",
+    "                                                away_event_list = None, winner = None)"
    ]
   },
   {
